# salesforce-printer-server

./: .dockerignore  .forceignore  .gitignore  DEPLOYMENT.md  Dockerfile  MANIFEST.in  MIGRATION.md  Makefile  README.md  auth-setup.sh  deploy.sh  docker-compose.yml  install.sh  pubsub_api.proto  pyproject.toml  setup.cfg  uninstall.sh  update.sh
docs/: APEX_TESTS.md  AUTHENTICATION.md  AUTH_OVERVIEW.md  AUTH_QUICKSTART.md  AUTOMATION_CAPABILITIES.md  PUBSUB_API.md  README.md  SALESFORCE_SETUP.md  STREAMING_AUTH.md
examples/: config.example.toml
force-app/main/default/classes/: PrinterService.cls
force-app/main/default/objects/Printer__c/: Printer__c.object-meta.xml
force-app/main/default/objects/Printer__c/fields/: DPI__c.field-meta.xml  Darkness__c.field-meta.xml  Enabled__c.field-meta.xml  Host__c.field-meta.xml  Label_Height_mm__c.field-meta.xml  Label_Width_mm__c.field-meta.xml  Port__c.field-meta.xml  Type__c.field-meta.xml  ZPL_Prefix__c.field-meta.xml
force-app/main/default/objects/SF_Printer_Event__e/: SF_Printer_Event__e.object-meta.xml
force-app/main/default/objects/SF_Printer_Event__e/fields/: Auth_Config__c.field-meta.xml  Content_Type__c.field-meta.xml  Content__c.field-meta.xml  Correlation_Id__c.field-meta.xml  Expire_After__c.field-meta.xml  Job_Title__c.field-meta.xml  Options__c.field-meta.xml  Printer_Host__c.field-meta.xml  Printer_Port__c.field-meta.xml  Printer_Type__c.field-meta.xml  Qty__c.field-meta.xml  Source__c.field-meta.xml  Type__c.field-meta.xml  ZPL_Config__c.field-meta.xml
print_jobs/: print_job_20260223_075605_001.zpl
scripts/: deploy_connected_app.py  generate_example_config.py  generate_stubs.py  setup_pubsub.ps1  setup_pubsub.sh
src/sf_printer_server/: auth_setup.py  cli.py  installer.py  log_config.py  main.py  utils.py
src/sf_printer_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/sf_printer_server/auth/: __init__.py  manager.py  oauth.py  streaming_auth.py
src/sf_printer_server/config/: defaults.toml  manager.py  schema.json
src/sf_printer_server/jobs/: __init__.py  models.py  processor.py
src/sf_printer_server/printers/: __init__.py  drivers.py  zpl.py
src/sf_printer_server/salesforce/: __init__.py  api.py  callback.py  cometd.py  context.py  metadata.py  pubsub.py
tests/: test_auth.py  test_cli.py  test_cometd.py  test_jobs.py
tools/: virtual_printer.py
