[tool.poetry]
name = "salesforce-printer-server"
version = "0.1.0"
description = "A server for managing printers and print jobs using Salesforce platform events."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
paho-mqtt = "^1.5.1"
cometd = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.7b0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"