[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sf-printer-server"
version = "0.1.0"
description = "A server for managing printers and print jobs using Salesforce platform events."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "youremail@example.com"}
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.1",
    "simple-salesforce>=1.12.0",
    "toml>=0.10.2",
    "aiosfstream>=0.5.0",
    "sqlalchemy>=2.0.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.4",
    "black>=21.7b0",
    "mypy>=0.910",
]

[project.scripts]
sf-printer-server = "sf_printer_server.main:main"

[tool.setuptools.packages.find]
where = ["src"]