[metadata]
name = sf-printer-server
version = attr: sf_printer_server.version.__version__
description = A Salesforce printer server that listens to platform events and manages print jobs.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/salesforce-printer-server
author = Your Name
author_email = your.email@example.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    requests>=2.25.1
    simple-salesforce>=1.12.0
    toml>=0.10.2
    aiosfstream>=0.5.0
    sqlalchemy>=2.0.0

[options.packages.find]
exclude =
    tests
    examples
    docs

[options.entry_points]
console_scripts =
    sf-printer-server = sf_printer_server.main:main

[options.extras_require]
dev =
    pytest
    black
    flake8
    mypy

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"