[metadata]
name = sf-printer-server
version = attr: sf_printer_server.version.__version__
description = A Salesforce printer server that listens to platform events and manages print jobs.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/salesforce-printer-server
author = Your Name
author_email = your.email@example.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.8

[options.packages.find]
where = src